2016-03-10  Mark Hatle <mark.hatle@windriver.com>
	* configure.ac, m4/libelf.m4, doc/Makefile.am, gelf/Makefile.am,
	  gelfx/Makefile.am, gelfx32/Makefile.am, patches/Makefile.am,
	  src/Makefile.am, src/rtld/Makefile.am, testsuite/Makefile.am:
		Update to avoid autoconf/automake warnings

2015-10-29  Mark Hatle <mark.hatle@windriver.com>
	    Kyle McMartin  <kmcmartin@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>
	    Julian Brown   <julian@codesourcery.com>

	* testsuite/ifunc.h: Fix missing #
	* src/arch-arm.c (arm_prelink_conflict_rela): Add missing hunk
	that implemented R_ARM_IRELATIVE, and ifunc conflicts.

	See: https://bugzilla.redhat.com/show_bug.cgi?id=1009601

2015-10-29  Mark Hatle <mark.hatle@windriver.com>
	* prelink.h: Define SHT_MIPS_ABIFLAGS if not set
	* prelink.c: OK to skip SHT_MIPS_ABIFLAGS
	  optimize the loop to stop on the first bad entry
	  adjust the error to give us more info on the bad section

2015-10-28   Mark Hatle <mark.hatle@windriver.com>
	* get.c: Sync rtld/prelink type_class values

2015-10-22   Mark Hatle <mark.hatle@windriver.com>
	* Upstream project appears to have been abandoned
	* Update the project to remove the SVN like 'trunk' dir
	* Adjust the AUTHORS file
	* Move the README.cross to replace README and update it
	* Move the previous ChangeLog to ChangeLog.1
	* Move the current ChangeLog.cross to ChangeLog

2015-10-21   Mark Hatle <mark.hatle@windriver.com>
	* Resync src/rtld to glibc-2.22
	* src/elf.h, src/rtld/*:
	  Update elf.h to glibc 2.22 version
	* get.c, prelink.h: Add symname to conflict structure
	* conflict.c: Provide more debuggign on a conflict (symname)

2015-09-11   Mark Hatle <mark.hatle@windriver.com>
	* doc/prelink.8: Add --ld-preload docs
	* testsuite/Maekfile.am, testsuite/preload1*: Add test

2015-09-11   Vaneet Narang <v.narang@samsung.com>
	* src/gather.c, src/get.c, src/main.c, src/prelink.h:
	Add ability to specify preloaded libraries that influence the
	prelinker.
