@@ -1,7 +1,7 @@
-/* glibc-2.22: sysdeps/generic/dl-hash.h */
+/* glibc-2.23: sysdeps/generic/dl-hash.h */
 
 /* Compute hash value for given string according to ELF standard.
-   Copyright (C) 1995-2015 Free Software Foundation, Inc.
+   Copyright (C) 1995-2016 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
