@@ -1,7 +1,7 @@
-/* glibc-2.22: elf/dl-lookup.c */
+/* glibc-2.23: elf/dl-lookup.c */
 
 /* Look up a symbol in the loaded objects.
-   Copyright (C) 1995-2015 Free Software Foundation, Inc.
+   Copyright (C) 1995-2016 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
